# mount-charles

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
src/geometry/: volume.rs
src/particle/: mod.rs  particle.rs  photon.rs  track.rs
src/sim/: world.rs
src/utils/: constants.rs  macro.rs  operations.rs  physics.rs  vec3.rs
