[package]
name = "mount_charles"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
approx = "0.5.1"
rand = "0.9.2"
getrandom = "0.3.4"
rand_distr = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
